Closed Bug 1319973 Opened 9 years ago Closed 9 years ago

Crash in mozilla::net::nsHttpConnection::OnSocketWritable

Categories

(Core :: Networking: HTTP, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox50 --- wontfix
firefox51 --- wontfix
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: swu, Assigned: mcmanus)

Details

(Keywords: crash, Whiteboard: [necko-active])

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-076a63af-5afa-40db-afe6-8a6512161123. ============================================================= Information provided by NaN from irc: my fx is crashing everytime and I suspect is because "Automatic proxy configuration", can someone please help me with this crash >> https://crash-stats.mozilla.com/report/index/bp-076a63af-5afa-40db-afe6-8a6512161123
It will be very helpful if someone can enable HTTP log, and provide the log when crash issue reproduced. https://developer.mozilla.org/en-US/docs/Mozilla/Debugging/HTTP_logging
timer calling connection after transaction has closed.
Assignee: nobody → mcmanus
Status: NEW → ASSIGNED
Comment on attachment 8814940 [details] [diff] [review] tls proxy null in nshttpconnection::onsocketwritable after timer Review of attachment 8814940 [details] [diff] [review]: ----------------------------------------------------------------- Null checks gooooooooooood
Attachment #8814940 - Flags: review?(hurley) → review+
Whiteboard: [necko-active]
https://hg.mozilla.org/integration/mozilla-inbound/rev/334758dabe03d652b633736f71c8544c9c9d19cc Bug 1319973 - tls proxy null in nshttpconnection::onsocketwritable after timer r=hurley
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Are 51 and/or 52 affected? Should we uplift?
Flags: needinfo?(mcmanus)
low volume null crash doesn't generally meet uplift criteria, though older versions are affected.
Flags: needinfo?(mcmanus)
It's a very simple patch, so I could see it being uplifted to Aurora.
Please nominate this for Aurora approval.
Flags: needinfo?(mcmanus)
Comment on attachment 8814940 [details] [diff] [review] tls proxy null in nshttpconnection::onsocketwritable after timer Approval Request Comment [Feature/Bug causing the regression]: http/2 proxying (very old) [User impact if declined]: potential null crash [Is this code covered by automated tests?]: no [Has the fix been verified in Nightly?]: yes [Needs manual test from QE? If yes, steps to reproduce]: no [List of other uplifts needed for the feature/fix]: none [Is the change risky?]: no [Why is the change risky/not risky?]: simple null check [String changes made/needed]: none
Flags: needinfo?(mcmanus)
Attachment #8814940 - Flags: approval-mozilla-aurora?
Comment on attachment 8814940 [details] [diff] [review] tls proxy null in nshttpconnection::onsocketwritable after timer fix potential crash with http/2 proxying, beta52+
Attachment #8814940 - Flags: approval-mozilla-aurora? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: