Bug 1319973 - tls proxy null in nshttpconnection::onsocketwritable after timer. r=hurley, a=jcristau